[metadata]
name = flow-manager-tools-new
version = 1.1
summary = Flow Manager Tools
description-file = README.rst
author = Brocade NetDev Team
author-email = jcastrog@brocade.com
home-page = http://www.brocade.com/
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    docopt
    flowmanager

extra_files =
    setup.py
    README.rst
    fmcheck

[global]


[entry-points]
console_scripts =
    fmcheck2 = flowmanager.fmcheck:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
